--- a/project/project.css
+++ b/project/project.css
@@ -1,16 +1,16 @@
 body{
-    background-color: indianred;
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-image: url("swim.jpg");
+    background-repeat:repeat;
+    background-size:30%;
 }
 div.header{
     font-family: Impact, sans-serif;
-    color:white;
+    color:rgb(117, 154, 255);
     font-size: 50px;
     text-align: center;
 }
 a.nav{
-    color: white;
+    color:rgb(16, 16, 58);
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;  
     padding: 25px;
@@ -18,18 +18,20 @@ a.nav{
     
 }
 div.navbar{
-    background-color:gray; 
+    background-color:lightgray; 
     text-align: center;
     font-size: 30px;   
 }
 div.body{
     font-family: Arial, Helvetica, sans-serif;
-    color:white;
-    background-color:gray;
+    color:rgb(16, 16, 58);
+    background-color:rgb(211, 211, 211);
+    
 }
 div.end{
     text-align: center;
-    background-color:gray;
+    background-color:lightgray;
+    color: rgb(16, 16, 58);
 }
 
 #home{
@@ -43,7 +45,7 @@ div.end{
     height: 3in;    
 }
 #cont{
-    background-color: gray;
+    background-color: lightgray;
     font-family: Arial, Helvetica, sans-serif;
     padding-left:450px;
     padding-bottom: 20px;
@@ -69,7 +71,7 @@ td.lobster{
     margin-left: 350px;
     }
 #map{
-    background-color: gray;
+    background-color: lightgray;
     padding-left: 450px;
     padding-bottom: 70px;
 }
@@ -78,6 +80,21 @@ td.lobster{
     font-family: 'Courier New', Courier, monospace;
     padding: 20px;
 }
+
 td.hello{
     padding: 20px;
+}
+td.hi{
+    padding-bottom:30px;
+    padding-top: 30px;
+
+}
+.transform{
+    transform: rotate(90deg);
+}
+p#honor{
+    margin-left:-400px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 25px;
+
 }
